k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: liqo-ingress
  namespace: liqo
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  rules:
    - host: liqo.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: liqo-backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: liqo-frontend
                port:
                  number: 3000
